--- a/index.html
+++ b/index.html
@@ -1,122 +1,152 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>Cleiviane - a software engineer - Linux man page</title>
-  <link href="css/style.css" media="screen" rel="stylesheet" type="text/css">
-</head>
-<body>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Giselleium - a creative software engineer - Linux man page</title>
+    <link
+      href="css/style.css"
+      media="screen"
+      rel="stylesheet"
+      type="text/css"
+    />
+  </head>
+  <body>
+    <pre class="manheader">
+GISELLLE DOUGAN                      Linux User's Manual                     GISELLE DOUGAN(8)</pre
+    >
+    <h1>NAME</h1>
+    <p class="subtext">Giselle Dougan - Game Designer</p>
 
-<pre class="manheader">CLEIVIANE COSTA                      Linux User's Manual                      CLEIVIANE COSTA(8)</pre>
-<h1>NAME</h1>
-<p class="subtext">
-  Cleiviane Costa - Senior Software Engineer
-</p>
+    <h1>SYNOPSIS</h1>
+    <p class="subtext">giselle [--game designer] [--content creator]</p>
 
-<h1>SYNOPSIS</h1>
-<p class="subtext">
-  cleiviane [--web-developer] [--tech-writer] [--speaker] [--publisher] [--other]
+    <h1>SUMMARY</h1>
+    <p class="subtext">
+      Experienced Software Engineer with 10+ years of experience developing and
+      managing software projects. Has solid experience with various technologies
+      and worked on diverse project types, from startups to Fortune 500
+      companies.
+    </p>
+    <p class="subtext">
+      Throughout her career, she has prioritized teamwork and consistently
+      delivered exceptional results, handling multiple responsibilities, setting
+      clear deadlines, and finding creative solutions to clear roadblocks
+    </p>
+    <p class="subtext">
+      For the last few years, she has been also working as a Tech Lead,
+      gathering experience managing other software engineers, leading technical
+      decisions, and fostering a collaborative work environment.
+    </p>
+    <p class="subtext">
+      In addition, she has actively contributed to the tech community as a tech
+      writer and speaker. My insightful blog posts have been often quoted in
+      Ruby Weekly, establishing myself as a thought leader in her field.
+    </p>
 
-</p>
+    <h1>OPTIONS</h1>
+    <p class="subtext">--web-developer</p>
+    <p class="doublesubtext">
+      Working with web development, I have experience with C#, PHP and NodeJS,
+      but I fall in love with Ruby 8 year ago and ever since I am aprimorating
+      my skills around it. I am always open to learn new technologies and I'm
+      used to be involved in the full software life cycle, from conception and
+      design to infrastructure, implementation, unity tests and deployment.
+    </p>
+    <p class="doublesubtext">General Knowledge:</p>
+    <ul class="triplesubtext">
+      <li>* HTML, Javascript, CSS, Bootstrap and AngularJS.</li>
+      <li>* Programming languages: Ruby, NodeJS, C# and PHP;</li>
+      <li>* Test Driven Development (TDD);</li>
+      <li>* Linux Ubuntu Server;</li>
+      <li>* Continuous Integration (Jenkins);</li>
+      <li>* Amazon AWS;</li>
+      <li>* Redis;</li>
+      <li>* MongoDB;</li>
+    </ul>
 
-<h1>SUMMARY</h1>
-<p class="subtext">
-  Experienced Software Engineer with 10+ years of experience developing and managing software projects. Has solid experience 
-  with various technologies and worked on diverse project types, from startups to Fortune 500 companies.</p>
-<p class="subtext">
-  Throughout her career, she has prioritized teamwork and consistently delivered exceptional results, handling multiple responsibilities, 
-  setting clear deadlines, and finding creative solutions to clear roadblocks</p>
-<p class="subtext">
-  For the last few years, she has been also working as a Tech Lead, gathering experience managing other software engineers, leading 
-  technical decisions, and fostering a collaborative work environment.</p>
-<p class="subtext">
-  In addition, she has actively contributed to the tech community as a tech writer and speaker. My insightful blog posts have 
-  been often quoted in Ruby Weekly, establishing myself as a thought leader in her field.</p>
+    <p class="subtext">--tech-writer</p>
+    <p class="doublesubtext">
+      * <a href="https://medium.com/@costa.cleiviane">Medium Personal Blog</a
+      ><br />
+      * <a href="https://medium.com/@costa.cleiviane">OmbuLab's Blog</a><br />
+      * <a href="https://medium.com/@costa.cleiviane">FastRuby's Blog</a><br />
+    </p>
 
-<h1>OPTIONS</h1>
-<p class="subtext">
-  --web-developer
-</p>
-<p class="doublesubtext">
-  Working with web development, I have experience with C#, PHP and NodeJS, but I fall in love with Ruby 8 year ago and 
-  ever since I am aprimorating my skills around it. I am always open to learn new technologies and I'm used to be involved in 
-  the full software life cycle, from conception and design to infrastructure, implementation, unity tests and deployment.
-</p>
-<p class="doublesubtext">
-  General Knowledge:
-</p>
-<ul class="triplesubtext">
-  <li>* HTML, Javascript, CSS, Bootstrap and AngularJS.</li>
-  <li>* Programming languages: Ruby, NodeJS, C# and PHP;</li>
-  <li>* Test Driven Development (TDD);</li>  
-  <li>* Linux Ubuntu Server;</li>  
-  <li>* Continuous Integration (Jenkins);</li>
-  <li>* Amazon AWS;</li>
-  <li>* Redis;</li>
-  <li>* MongoDB;</li>
-</ul>
+    <p class="subtext">--publisher</p>
+    <p class="doublesubtext">
+      <a href=""
+        >Article: Proposta de Melhoria do Processo de Produção com a Implantação
+        de Integração Contínua em uma empresa de desenvolvimento de Software</a
+      ><br />
+      Published on Tech Conference ERI-GO (Escola Regional de Informática de
+      Goiás) da SBC (Sociedade Brasileira de Computação).
+    </p>
 
-<p class="subtext">
-  --tech-writer
-</p>
-<p class="doublesubtext">
-  * <a href="https://medium.com/@costa.cleiviane">Medium Personal Blog</a><br>
-  * <a href="https://medium.com/@costa.cleiviane">OmbuLab's Blog</a><br>
-  * <a href="https://medium.com/@costa.cleiviane">FastRuby's Blog</a><br>
-</p>
+    <h1>NOTES</h1>
+    <p class="subtext bottomcut">
+      * Bachelor of Computer Information Systems - Universidade Federal de Goiás
+      - 2013;<br />
+    </p>
+    <p class="subtext bottomcut">
+      * System's Engineer Specialist - ESAB - 2016;<br />
+    </p>
+    <br />
 
-<p class="subtext">
-  --publisher
-</p>
-<p class="doublesubtext">
-  <a href="">Article: Proposta de Melhoria do Processo de Produção com a Implantação de Integração Contínua em uma empresa de desenvolvimento de Software</a><br>
-  Published on Tech Conference ERI-GO (Escola Regional de Informática de Goiás) da SBC (Sociedade Brasileira de Computação).
-</p>
+    <h1>HISTORY</h1>
+    <p class="subtext bottomcut">
+      * <a href="http://www.tron.com/">Tron Informática</a><br />
+      Sep, 2012 to Aug, 2017 - Full Stack Web Developer
+    </p>
+    <br />
+    <p class="doublesubtext">- What did I do?</p>
+    <ul class="triplesubtext">
+      <li>
+        * Helped to build, launch and maintain the first line of web products of
+        the company using Ruby, NodeJs, and MongoDB.
+      </li>
+      <li>
+        * Lead developer of web application products. Worked on architecture,
+        database maintenance, and deployment.
+      </li>
+      <li>
+        * Collaborated with clients and other developers to define and
+        prioritize bug fixes and new features, leading to accomplishing the mark
+        of millions of documents stored in the database.
+      </li>
+      <li>* Manage all Linux Servers on Amazon AWS EC2 instances.</li>
+      <li>* Responsible for performing deploys the deploys.</li>
+    </ul>
 
-<h1>NOTES</h1>
-<p class="subtext bottomcut">
-  * Bachelor of Computer Information Systems - Universidade Federal de Goiás - 2013;<br>
-</p>
-<p class="subtext bottomcut">
-  * System's Engineer Specialist - ESAB - 2016;<br>
-</p>
-<br>
+    <h1>SEE ALSO</h1>
+    <ul class="subtext">
+      <li>* E-mail: costa dot cleiviane at gmail dot com</li>
+      <li>
+        * Github:
+        <a href="http://github.com/cleicar">http://github.com/cleicar</a>
+      </li>
+      <li>
+        * LinkedIn:
+        <a href="http://br.linkedin.com/in/cleiviane/"
+          >http://br.linkedin.com/in/cleiviane</a
+        >
+      </li>
+    </ul>
 
-<h1>HISTORY</h1>
-<p class="subtext bottomcut">
-  * <a href="http://www.tron.com/">Tron Informática</a><br>
-    Sep, 2012 to Aug, 2017  - Full Stack Web Developer
-</p>
-<br>
-<p class="doublesubtext">
-  - What did I do?
-</p>
-<ul class="triplesubtext">
-  <li>* Helped to build, launch and maintain the first line of web products of the company using Ruby, NodeJs, and MongoDB.</li>
-  <li>* Lead developer of web application products. Worked on architecture, database maintenance, and deployment.</li>
-  <li>* Collaborated with clients and other developers to define and prioritize bug fixes and new features, leading to accomplishing the mark of millions of documents stored in the database.</li>  
-  <li>* Manage all Linux Servers on Amazon AWS EC2 instances.</li> 
-  <li>* Responsible for performing deploys the deploys.</li>
-</ul>
-  
+    <p></p>
 
-<h1>SEE ALSO</h1>
-<ul class="subtext">
-  <li>* E-mail:      costa dot cleiviane at gmail dot com</li>
-  <li>* Github:     <a href="http://github.com/cleicar">http://github.com/cleicar</a></li>
-  <li>* LinkedIn:	 <a href="http://br.linkedin.com/in/cleiviane/">http://br.linkedin.com/in/cleiviane</a></li>
-</ul>
-
-<p></p>
-
-<br><br>
-<pre class="manheader">Cleiviane Costa                          <script>document.write( new Date().toLocaleDateString() );</script>                                  CLEIVIANE
+    <br /><br />
+    <pre
+      class="manheader"
+    >Cleiviane Costa                          <script>document.write( new Date().toLocaleDateString() );</script>                                  CLEIVIANE
 </pre>
 
-<br>
-<p class="footer">
-  © <script>document.write( new Date().getFullYear() );</script> Cleiviane Costa
-</p>
-
-</body>
+    <br />
+    <p class="footer">
+      ©
+      <script>
+        document.write(new Date().getFullYear());
+      </script>
+      Cleiviane Costa
+    </p>
+  </body>
 </html>
