--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Giselleium - a creative software engineer - Linux man page</title>
+    <title>
+      Giselleium - Giselle Dougan - a creative engineer 🎮 - Linux man page
+    </title>
     <link
       href="css/style.css"
       media="screen"
@@ -15,36 +17,48 @@
 GISELLLE DOUGAN                      Linux User's Manual                     GISELLE DOUGAN(8)</pre
     >
     <h1>NAME</h1>
-    <p class="subtext">Giselle Dougan - Game Designer</p>
+    <p class="subtext">Giselle Dougan - a creative engineer 🎮</p>
 
     <h1>SYNOPSIS</h1>
-    <p class="subtext">giselle [--game designer] [--content creator]</p>
+    <p class="subtext">
+      giselle [--software-engineer] [--game-designer][--growth-engineer]
+      [--content-creator]
+    </p>
 
     <h1>SUMMARY</h1>
     <p class="subtext">
-      Experienced Software Engineer with 10+ years of experience developing and
-      managing software projects. Has solid experience with various technologies
-      and worked on diverse project types, from startups to Fortune 500
-      companies.
+      A software engineer and content creator actively seeking roles in the
+      dynamic realms of software development and gaming. My focus centers on
+      contributing my expertise to the industry and spreading a positive message
+      to my audience. I am currently in pursuit of the Unity Associate
+      Certification in Game Development and Programming, and a certification in
+      C#, to showcase my skillset and learn new tricks along the way.
     </p>
     <p class="subtext">
-      Throughout her career, she has prioritized teamwork and consistently
-      delivered exceptional results, handling multiple responsibilities, setting
-      clear deadlines, and finding creative solutions to clear roadblocks
+      My experience as a software developer started in hybrid marketing roles
+      where I worked with MarTech tools to create and manage events and
+      campaigns for SaaS-Based companies. This eventually led to me taking up
+      opportunities to host and create content surrounding game devolvement and
+      the software engineering process.
     </p>
     <p class="subtext">
-      For the last few years, she has been also working as a Tech Lead,
-      gathering experience managing other software engineers, leading technical
-      decisions, and fostering a collaborative work environment.
+      One of my prominent achievements encompasses the creation of a Unity VR
+      interactive space meticulously designed to support mental health
+      initiatives. Through the creations of projects such as these, I find
+      unique and fruitful ways to bring the knowledge I have of software
+      development to those who made need it.
     </p>
     <p class="subtext">
-      In addition, she has actively contributed to the tech community as a tech
-      writer and speaker. My insightful blog posts have been often quoted in
-      Ruby Weekly, establishing myself as a thought leader in her field.
+      As an additional pursuit, I am also a creator within the cosplay and
+      gaming community and have hosted many events at conventions such as Los
+      Angeles Comic Con. Through my web series pixels + progress and other
+      content, I talk about inclusion, representation and the furtherment of
+      knowledge while stressing the importance of diverse thinking within these
+      spaces.
     </p>
 
     <h1>OPTIONS</h1>
-    <p class="subtext">--web-developer</p>
+    <p class="subtext">--software-engineer</p>
     <p class="doublesubtext">
       Working with web development, I have experience with C#, PHP and NodeJS,
       but I fall in love with Ruby 8 year ago and ever since I am aprimorating
@@ -64,7 +78,7 @@ GISELLLE DOUGAN                      Linux User's Manual                     GIS
       <li>* MongoDB;</li>
     </ul>
 
-    <p class="subtext">--tech-writer</p>
+    <p class="subtext">--game-designer</p>
     <p class="doublesubtext">
       * <a href="https://medium.com/@costa.cleiviane">Medium Personal Blog</a
       ><br />
@@ -72,7 +86,7 @@ GISELLLE DOUGAN                      Linux User's Manual                     GIS
       * <a href="https://medium.com/@costa.cleiviane">FastRuby's Blog</a><br />
     </p>
 
-    <p class="subtext">--publisher</p>
+    <p class="subtext">[--growth-engineer</p>
     <p class="doublesubtext">
       <a href=""
         >Article: Proposta de Melhoria do Processo de Produção com a Implantação
@@ -137,7 +151,7 @@ GISELLLE DOUGAN                      Linux User's Manual                     GIS
     <br /><br />
     <pre
       class="manheader"
-    >Cleiviane Costa                          <script>document.write( new Date().toLocaleDateString() );</script>                                  CLEIVIANE
+    >Giselle Dougan                         <script>document.write( new Date().toLocaleDateString() );</script>                                 GISELLE
 </pre>
 
     <br />
@@ -146,7 +160,7 @@ GISELLLE DOUGAN                      Linux User's Manual                     GIS
       <script>
         document.write(new Date().getFullYear());
       </script>
-      Cleiviane Costa
+      Giselle Dougan
     </p>
   </body>
 </html>
