--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <pre class="manheader">
-GISELLLE DOUGAN                      Linux User's Manual                     GISELLE DOUGAN(8)</pre
+GISELLLE DOUGAN                      Linux User's Manual                     GISELLE DOUGAN(2)</pre
     >
     <h1>NAME</h1>
     <p class="subtext">Giselle Dougan - a creative engineer 🎮</p>
@@ -60,33 +60,54 @@ GISELLLE DOUGAN                      Linux User's Manual                     GIS
     <h1>OPTIONS</h1>
     <p class="subtext">--software-engineer</p>
     <p class="doublesubtext">
-      Working with web development, I have experience with C#, PHP and NodeJS,
-      but I fall in love with Ruby 8 year ago and ever since I am aprimorating
-      my skills around it. I am always open to learn new technologies and I'm
-      used to be involved in the full software life cycle, from conception and
-      design to infrastructure, implementation, unity tests and deployment.
+      My experience in software development lies with web devolvement and game
+      design tools. Burgeoning from VR development, my general knowledge lies
+      with the React tech stack, with a heavy focus on frontend development and
+      optimization of design pipelines for UI/UX design. Utilizing agile
+      development and time-tracking project management methods for each product
+      created.
     </p>
-    <p class="doublesubtext">General Knowledge:</p>
+    <p class="doublesubtext">Skills:</p>
     <ul class="triplesubtext">
-      <li>* HTML, Javascript, CSS, Bootstrap and AngularJS.</li>
-      <li>* Programming languages: Ruby, NodeJS, C# and PHP;</li>
-      <li>* Test Driven Development (TDD);</li>
-      <li>* Linux Ubuntu Server;</li>
-      <li>* Continuous Integration (Jenkins);</li>
-      <li>* Amazon AWS;</li>
-      <li>* Redis;</li>
-      <li>* MongoDB;</li>
+      <li>👾 React Tech Stack, HTML, CSS</li>
+      <li>👾 Programming languages: C#, Python, Java, JavaScript, Kotlin</li>
+      <li>👾 Agile/Continuous Development</li>
+      <li>👾 Figma, Adobe Suite, and other design tools</li>
+      <li>👾 AWS, Github, Jira and other devlopement organizational tools</li>
     </ul>
 
     <p class="subtext">--game-designer</p>
     <p class="doublesubtext">
-      * <a href="https://medium.com/@costa.cleiviane">Medium Personal Blog</a
+      My proficiency extends to diverse projects within the Unity environment,
+      where I develop most of my current VR projects. I currently work in XR
+      devolvement where I create environments and experiences for my company
+      UNSHUT.Notably, my portfolio encompasses a significant undertaking—a Unity
+      VR interactive space tailored to promote mental health. Other projects
+      such as narrative driven RPGs are small projects also in the works
+      throughout different game engines.
+    </p>
+    <p class="doublesubtext">Skills:</p>
+    <ul class="triplesubtext">
+      <li>👾 Unity, Godot, RPG Maker and other game engines</li>
+      <li>👾 Programming languages: C#, Lua, Python</li>
+      <li>👾 Technical Documentation & Project Management</li>
+      <li>👾 Figma, Adobe Suite, and other design tools</li>
+      <li>
+        👾 Twine, Blender, Cinema 4D and other asset design and narrative tools
+      </li>
+    </ul>
+
+    <p class="subtext">--growth-engineer</p>
+    <p class="doublesubtext">
+      <a href=""
+        >Article: Proposta de Melhoria do Processo de Produção com a Implantação
+        de Integração Contínua em uma empresa de desenvolvimento de Software</a
       ><br />
-      * <a href="https://medium.com/@costa.cleiviane">OmbuLab's Blog</a><br />
-      * <a href="https://medium.com/@costa.cleiviane">FastRuby's Blog</a><br />
+      Published on Tech Conference ERI-GO (Escola Regional de Informática de
+      Goiás) da SBC (Sociedade Brasileira de Computação).
     </p>
 
-    <p class="subtext">[--growth-engineer</p>
+    <p class="subtext">--content-creator</p>
     <p class="doublesubtext">
       <a href=""
         >Article: Proposta de Melhoria do Processo de Produção com a Implantação
@@ -98,12 +119,10 @@ GISELLLE DOUGAN                      Linux User's Manual                     GIS
 
     <h1>NOTES</h1>
     <p class="subtext bottomcut">
-      * Bachelor of Computer Information Systems - Universidade Federal de Goiás
-      - 2013;<br />
+      👾 B.S in Software Engineering - Cal Poly San Luis Obispo <br />
     </p>
-    <p class="subtext bottomcut">
-      * System's Engineer Specialist - ESAB - 2016;<br />
-    </p>
+    <p class="subtext bottomcut">👾 A.A in Psychology <br /></p>
+    <p class="subtext bottomcut">👾 Registered Behavioral Technician <br /></p>
     <br />
 
     <h1>HISTORY</h1>
@@ -133,16 +152,14 @@ GISELLLE DOUGAN                      Linux User's Manual                     GIS
 
     <h1>SEE ALSO</h1>
     <ul class="subtext">
-      <li>* E-mail: costa dot cleiviane at gmail dot com</li>
+      <li>* E-mail: giselle.dougan@hotmail.com</li>
       <li>
-        * Github:
-        <a href="http://github.com/cleicar">http://github.com/cleicar</a>
+        👾
+        <a href="https://the-periodic-table.com/">Website</a>
       </li>
       <li>
-        * LinkedIn:
-        <a href="http://br.linkedin.com/in/cleiviane/"
-          >http://br.linkedin.com/in/cleiviane</a
-        >
+        👾
+        <a href="https://www.linkedin.com/in/giselleium/">LinkedIn</a>
       </li>
     </ul>
 
