--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
   </head>
   <body>
     <pre class="manheader">
-GISELLLE DOUGAN                      Linux User's Manual                     GISELLE DOUGAN(2)</pre
+GISELLLE DOUGAN                                                              GISELLE DOUGAN(2)</pre
     >
     <h1>NAME</h1>
     <p class="subtext">Giselle Dougan - a creative engineer 🎮</p>
 
     <h1>SYNOPSIS</h1>
     <p class="subtext">
-      giselle [--software-engineer] [--game-designer][--growth-engineer]
-      [--content-creator]
+      giselle
+      [--software-engineer][--game-designer][--growth-engineer][--content-creator]
     </p>
 
     <h1>SUMMARY</h1>
@@ -99,23 +99,40 @@ GISELLLE DOUGAN                      Linux User's Manual                     GIS
 
     <p class="subtext">--growth-engineer</p>
     <p class="doublesubtext">
-      <a href=""
-        >Article: Proposta de Melhoria do Processo de Produção com a Implantação
-        de Integração Contínua em uma empresa de desenvolvimento de Software</a
-      ><br />
-      Published on Tech Conference ERI-GO (Escola Regional de Informática de
-      Goiás) da SBC (Sociedade Brasileira de Computação).
+      My first experience in the industry started off with a hybrid roles in
+      marketing and engineering. In these positions I learned to use MarTech
+      tools to create products, campaigns and more. This was my first exposure
+      to technical writing and the developmental process.
     </p>
+    <p class="doublesubtext">Skills:</p>
+    <ul class="triplesubtext">
+      <li>👾 Salesfoce, Zapier</li>
+      <li>👾 Database Management</li>
+      <li>👾 Automation creation & Maintenance</li>
+      <li>👾 Campaign & Event creation & Management,</li>
+    </ul>
 
     <p class="subtext">--content-creator</p>
     <p class="doublesubtext">
-      <a href=""
-        >Article: Proposta de Melhoria do Processo de Produção com a Implantação
-        de Integração Contínua em uma empresa de desenvolvimento de Software</a
-      ><br />
-      Published on Tech Conference ERI-GO (Escola Regional de Informática de
-      Goiás) da SBC (Sociedade Brasileira de Computação).
+      Over the past few years, I have immersed myself in the world of cosplay,
+      consistently infusing cherished characters with my own creative flair. My
+      vision extends beyond the surface, as I aspire to cultivate a community
+      where creativity and inclusivity thrive. Beyond the conventions and
+      costumes, I've had the privilege of gracing fashion shows and
+      collaborating with local photographers, a testament to my dedication and
+      versatility. However, my primary digital canvas is TikTok, where I curate
+      content that seamlessly merges anime, cosplay, and the intriguing realm of
+      STEM. My mission is to kindle inspiration within the forthcoming
+      generation of engineers while demonstrating the harmonious coexistence of
+      artistic expression and technological innovation.
     </p>
+    <p class="doublesubtext">Stage Credits:</p>
+    <ul class="triplesubtext">
+      <li>👾 Panel Host</li>
+      <li>👾 Fashion Shows: Pacific Media Expo, Anime Pasadena</li>
+      <li>👾 Fashion Brands: Lamodam Disco Disiac</li>
+      <li>👾 Graphic Design: Convention Assets</li>
+    </ul>
 
     <h1>NOTES</h1>
     <p class="subtext bottomcut">
@@ -126,33 +143,93 @@ GISELLLE DOUGAN                      Linux User's Manual                     GIS
     <br />
 
     <h1>HISTORY</h1>
+
     <p class="subtext bottomcut">
-      * <a href="http://www.tron.com/">Tron Informática</a><br />
-      Sep, 2012 to Aug, 2017 - Full Stack Web Developer
+      👾 <a href="https://unshut.me/">UNSHUT</a><br />
+      2023 - Immersive Engineer
     </p>
     <br />
-    <p class="doublesubtext">- What did I do?</p>
-    <ul class="triplesubtext">
+    <ul class="doublesubtext">
       <li>
-        * Helped to build, launch and maintain the first line of web products of
-        the company using Ruby, NodeJs, and MongoDB.
+        Crafting XR experiences within the Unity 3D environment. Expertise in
+        creating captivating virtual environments, seamless interactions, and
+        cutting-edge simulations. Leveraging technical prowess to transform
+        ideas into immersive realities.
       </li>
+    </ul>
+
+    <p class="subtext bottomcut">
+      👾 <a href="https://www.spotvirtual.com/">Spot</a><br />
+      2022 - Growth Engineer
+    </p>
+    <br />
+    <ul class="doublesubtext">
       <li>
-        * Lead developer of web application products. Worked on architecture,
-        database maintenance, and deployment.
+        A hybrid role that surrounded both marketing and engineering duties.
+        Creation of a social media structure and framework, creation of
+        campaigns and posts. Contributed to localization work within a
+        Typescript format.
       </li>
+    </ul>
+
+    <p class="subtext bottomcut">
+      👾 <a href="https://www.platohq.com/">Plato</a><br />
+      2022 - Growth Associate/Event Specialist
+    </p>
+    <br />
+    <ul class="doublesubtext">
       <li>
-        * Collaborated with clients and other developers to define and
-        prioritize bug fixes and new features, leading to accomplishing the mark
-        of millions of documents stored in the database.
+        Specialist in managing aspects of event organization, planning, and
+        automation. This includes constructing and building campaigns,
+        automation, and utilizing tools to create efficient workflows. Mostly
+        targeted towards engineering and product industries, including VR
+        events.
       </li>
-      <li>* Manage all Linux Servers on Amazon AWS EC2 instances.</li>
-      <li>* Responsible for performing deploys the deploys.</li>
+    </ul>
+
+    <p class="subtext bottomcut">
+      👾 <a href="https://www.calpoly.edu/">Cal Poly</a><br />
+      2022 - Undergrad Research Assistant
+    </p>
+    <br />
+    <ul class="doublesubtext">
+      <li>
+        Assisting with various projects for professors in the Computer Science &
+        Software Engineering department
+      </li>
+    </ul>
+
+    <p class="subtext bottomcut">
+      👾 <a href="https://entreidades.pt/">Entre Idades</a><br />
+      2019 - Software Engineering Intern
+    </p>
+    <br />
+    <ul class="doublesubtext">
+      <li>
+        Abroad opportunity in Portugal to help format a better website for the
+        non-profit organization, Entre Idades, through front-end development
+        using, HTML and C.
+      </li>
+    </ul>
+
+    <p class="subtext bottomcut">
+      👾 <a href="https://www.northropgrumman.com/">Northrup Grumann</a><br />
+      2017 - Aerospace Intern
+    </p>
+    <br />
+    <ul class="doublesubtext">
+      <li>
+        A high school program that allowed students to work with corporate
+        companies after a rigorous application process. I worked with the
+        Aerospace Systems division at Northrup Grumman and helped code a program
+        that would sort their data in a more efficient manner. Some projects
+        included working with Excel, SQL, and more.
+      </li>
     </ul>
 
     <h1>SEE ALSO</h1>
     <ul class="subtext">
-      <li>* E-mail: giselle.dougan@hotmail.com</li>
+      <li>👾 <a href="mailto:giselle.dougan@hotmail.com">Email</a></li>
       <li>
         👾
         <a href="https://the-periodic-table.com/">Website</a>
