--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ GISELLLE DOUGAN                                                              GIS
       <li>👾 Salesfoce, Zapier</li>
       <li>👾 Database Management</li>
       <li>👾 Automation creation & Maintenance</li>
-      <li>👾 Campaign & Event creation & Management,</li>
+      <li>👾 Campaign & Event Creation & Management</li>
     </ul>
 
     <p class="subtext">--content-creator</p>
@@ -140,7 +140,18 @@ GISELLLE DOUGAN                                                              GIS
     </p>
     <p class="subtext bottomcut">👾 A.A in Psychology <br /></p>
     <p class="subtext bottomcut">👾 Registered Behavioral Technician <br /></p>
-    <br />
+    <p class="subtext bottomcut">
+      👾 Occasionally I stream game dev and engage with my audience, where I
+      craft my small-scale games.<br />
+    </p>
+    <p class="subtext bottomcut">
+      👾
+      <a
+        href="https://theperiodictablecom.wordpress.com/category/technology/pixels-progress/"
+        >Webseries: pixels + progress</a
+      ><br />
+      <br />
+    </p>
 
     <h1>HISTORY</h1>
 
