--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <pre class="manheader">
-GISELLLE DOUGAN                                                              GISELLE DOUGAN(2)</pre
+GISELLE DOUGAN                                                              GISELLE DOUGAN(2)</pre
     >
     <h1>NAME</h1>
     <p class="subtext">Giselle Dougan - a creative engineer 🎮</p>
@@ -30,31 +30,8 @@ GISELLLE DOUGAN                                                              GIS
       A software engineer and content creator actively seeking roles in the
       dynamic realms of software development and gaming. My focus centers on
       contributing my expertise to the industry and spreading a positive message
-      to my audience. I am currently in pursuit of the Unity Associate
-      Certification in Game Development and Programming, and a certification in
-      C#, to showcase my skillset and learn new tricks along the way.
-    </p>
-    <p class="subtext">
-      My experience as a software developer started in hybrid marketing roles
-      where I worked with MarTech tools to create and manage events and
-      campaigns for SaaS-Based companies. This eventually led to me taking up
-      opportunities to host and create content surrounding game devolvement and
-      the software engineering process.
-    </p>
-    <p class="subtext">
-      One of my prominent achievements encompasses the creation of a Unity VR
-      interactive space meticulously designed to support mental health
-      initiatives. Through the creations of projects such as these, I find
-      unique and fruitful ways to bring the knowledge I have of software
-      development to those who made need it.
-    </p>
-    <p class="subtext">
-      As an additional pursuit, I am also a creator within the cosplay and
-      gaming community and have hosted many events at conventions such as Los
-      Angeles Comic Con. Through my web series pixels + progress and other
-      content, I talk about inclusion, representation and the furtherment of
-      knowledge while stressing the importance of diverse thinking within these
-      spaces.
+      to my audience. I am currently have a certification in C# (Mircosoft
+      Learn), and am working on Unity devlopement certifications.
     </p>
 
     <h1>OPTIONS</h1>
@@ -130,7 +107,7 @@ GISELLLE DOUGAN                                                              GIS
     <ul class="triplesubtext">
       <li>👾 Panel Host</li>
       <li>👾 Fashion Shows: Pacific Media Expo, Anime Pasadena</li>
-      <li>👾 Fashion Brands: Lamodam Disco Disiac</li>
+      <li>👾 Fashion Brands: Lamoda, Disco Disiac</li>
       <li>👾 Graphic Design: Convention Assets</li>
     </ul>
 
@@ -140,10 +117,6 @@ GISELLLE DOUGAN                                                              GIS
     </p>
     <p class="subtext bottomcut">👾 A.A in Psychology <br /></p>
     <p class="subtext bottomcut">👾 Registered Behavioral Technician <br /></p>
-    <p class="subtext bottomcut">
-      👾 Occasionally I stream game dev and engage with my audience, where I
-      craft my small-scale games.<br />
-    </p>
     <p class="subtext bottomcut">
       👾
       <a
