--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ GISELLE DOUGAN                                                              GISE
       A software engineer and content creator actively seeking roles in the
       dynamic realms of software development and gaming. My focus centers on
       contributing my expertise to the industry and spreading a positive message
-      to my audience. I am currently have a certification in C# (Mircosoft
-      Learn), and am working on Unity devlopement certifications.
+      to my audience. I currently have a certification in C# (Mircosoft
+      Learn) and am working on Unity development certifications.
     </p>
 
     <h1>OPTIONS</h1>
